# Central

./: .gitignore  CLAUDE.md  Central.sln  Immunocore - IT Network MLAG & Servers v3.docx  Immunocore - IT Network QoS v3.md  MEP-91-CORE02.txt  MEP-92-CORE01.txt  MEP-93-L1-CORE02.txt  MEP-94-CORE01.txt  MEP-96-L2-CORE02.txt  NuGet.config  README.md  run.sh  start-gateway.cmd  start-task-service.cmd  switch_data.xlsx
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly.yml  pr-check.yml  promote.yml
Source/TIG.IntegrationServer/: TIG.IntegrationServer.sln
Source/TIG.TotalLink.Client/: TIG.TotalLink.Client.sln
Source/TIG.TotalLink.Server/: TIG.TotalLink.Server.sln
apps/: .gitkeep  README.md
apps/desktop/: App.xaml  App.xaml.cs  Bootstrapper.cs  Central.Desktop.csproj  GlobalActionsModule.cs  ImagePickerWindow.xaml  ImagePickerWindow.xaml.cs  ImportWizardDialog.xaml  ImportWizardDialog.xaml.cs  LoginWindow.xaml.cs  MainWindow.AdminPanels.cs  MainWindow.xaml  MainWindow.xaml.cs  MfaEnrollmentDialog.xaml  MfaEnrollmentDialog.xaml.cs  SetPasswordWindow.xaml  SetPasswordWindow.xaml.cs  SplashWindow.xaml
apps/web/: angular.json  package-lock.json  package.json
assets/: .gitkeep
backups/: README.md
config/: auth-service.toml  gateway.env
db/: schema.sql  seed_auth.sql
db/migrations/: 002_builder.sql  003_connectivity.sql  004_ipam_fields.sql  005_lookup_values.sql  006_users_roles.sql  007_roles_table.sql  008_role_sites.sql  009_config_ranges.sql  010_excel_sheets.sql  011_view_reserved.sql  012_config_versions.sql  013_rename_ipam_to_devices.sql  014_asn_definitions.sql  015_app_log.sql  016_builder_selections.sql  017_missing_tables.sql  018_switch_model_interfaces.sql  019_lldp_columns.sql  020_interface_optics.sql  021_p2p_descriptions.sql  022_vlan_site.sql  023_bgp_sync.sql  024_permissions_v2.sql  025_audit_log_v2.sql  026_platform_schema.sql  027_global_admin.sql  028_tenant_id.sql  029_ribbon_default_panel.sql  030_migrate_users_to_auth.sql  031_module_catalog_audit_globaladmin.sql  032_global_admin_audit.sql  033_global_admin_permissions.sql  034_tenant_addresses_contacts.sql  035_api_key_salt.sql  036_companies.sql  037_contacts_v2.sql  038_teams_departments.sql  039_addresses_unified.sql  040_user_profiles.sql  041_global_admin_v2.sql  (+76 more)
desktop/: Central.sln  NuGet.config  README.md  cleanup-old-folders.ps1  find_window.ps1  generate_icon.py
desktop/Central.Api/: Central.Api.csproj  Containerfile  Dockerfile  Program.cs
desktop/Central.Api.Client/: ApiDataService.cs  AuditServiceClient.cs  AuthServiceClient.cs  Central.Api.Client.csproj  CorrelationIdHandler.cs  SignalRClient.cs  SyncServiceClient.cs
desktop/Central.Collaboration/: Central.Collaboration.csproj  ConflictDetector.cs
desktop/Central.Core/: Central.Core.csproj
desktop/Central.Data/: AppLogger.cs  BackupService.cs  Central.Data.csproj  DbRepository.Admin.cs  DbRepository.ApiKeys.cs  DbRepository.Audit.cs  DbRepository.Auth.cs  DbRepository.Dashboard.cs  DbRepository.GlobalAdmin.cs  DbRepository.IconOverrides.cs  DbRepository.Integrations.cs  DbRepository.Links.cs  DbRepository.Notifications.cs  DbRepository.Ribbon.cs  DbRepository.ServiceDesk.cs  DbRepository.Switches.cs  DbRepository.Sync.cs  DbRepository.Tasks.cs  DbRepository.cs  DbResult.cs  RepositoryBase.cs  StartupHealthCheck.cs
desktop/Central.Desktop/: App.xaml.cs  Bootstrapper.cs  BulkEditWindow.xaml  BulkEditWindow.xaml.cs  Central.Desktop.csproj  GlobalActionsModule.cs  ImagePickerWindow.xaml.cs  ImportWizardDialog.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SetPasswordWindow.xaml.cs  SplashWindow.xaml.cs  (+1 more)
docs/: ARCHITECTURE.md  AUTH_SERVICE_BUILDOUT.md  CREDENTIALS.md  CRM_EXPANSION_5_STAGES.md  ENTERPRISE_CRM_BUILDOUT.md  FEATURE_TEST_CHECKLIST.md  GLOBALADMIN_BUILDOUT.md  IDP_BUILDOUT.md  LEGACY_MIGRATION.md  MERGE_PLAN.md  MODULE_UPDATE_SYSTEM.md  NETWORKING_ATTRIBUTE_SYSTEM.md  NETWORKING_BUILDOUT_PLAN.md  NETWORKING_MASTER_FUNCTIONALITY.md  NETWORKING_RIBBON_AUDIT.md  REFERENCE_INVENTORY_STOCK_MODEL.md  REFERENCE_SALES_ORDER_RELEASE.md  REFERENCE_SEQUENCE_GENERATION.md  REFERENCE_WAREHOUSING.md  REPO_STRUCTURE_PLAN.md  SERVER_ARCHITECTURE.md  SERVICE_DESK_MODULE.md  TASKS_BUILDOUT.md  TOTALLINK_PATTERNS.md
infra/: Vagrantfile  pod.yaml  setup.sh  terragrunt.hcl
libs/: .gitkeep  README.md
modules/: .gitkeep  README.md
parser/: db_loader.py  excel_importer.py  picos_parser.py
scripts/: backup.sh  check-services.sh
services/: README.md
services/auth/: Cargo.toml
services/auth/examples/: compute_totp.rs
services/auth/src/: main.rs
services/identity/: Cargo.toml
services/identity/admin-service/: Cargo.toml
services/identity/admin-service/src/: main.rs
services/identity/auth-service/: Cargo.toml
services/identity/auth-service/examples/: hash_password.rs
services/identity/core/: Cargo.toml
services/identity/core/src/: jwt.rs  lib.rs  passwords.rs  tokens.rs
services/networking-engine/: Cargo.toml  Containerfile
services/networking-engine/src/: allocation.rs  api.rs  audit.rs  bulk_edit.rs  bulk_export.rs  bulk_import.rs  change_sets.rs  cli_flavor.rs  config_gen.rs  dhcp_relay.rs  error.rs  hash.rs  ip_allocation.rs  ip_math.rs  ip_math6.rs  lib.rs  locks.rs  main.rs  models.rs  naming.rs  naming_overrides.rs  naming_resolver.rs  pool_utilization.rs  regenerate.rs  saved_views.rs  scope_grants.rs  search.rs  server_fanout.rs  tenant_config.rs  validation.rs  xlsx_codec.rs
services/networking-engine/tests/: bulk_edit_integration.rs  bulk_import_integration.rs  bulk_round_trip_integration.rs  config_gen_integration.rs  render_rbac_integration.rs  saved_views_integration.rs  scope_grants_integration.rs  search_integration.rs
services/tenant-provisioner/: Cargo.toml  Containerfile
services/tenant-provisioner/src/: api.rs  db.rs  k8s_ops.rs  main.rs  provisioner.rs  queue.rs
tests/: .gitkeep
tools/: .gitkeep  README.md
web/: app.py  requirements.txt  ssh_utils.py
web-client/: README.md  package-lock.json  package.json
(+97196 files in other folders)
