[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
description = "Central auth-service — Phase A: login against secure_auth.users. See docs/AUTH_SERVICE_BUILDOUT.md for the phased plan."

[dependencies]
tokio         = { version = "1", features = ["full"] }
axum          = { version = "0.7", features = ["macros"] }
tower-http    = { version = "0.6", features = ["trace", "cors"] }
sqlx          = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"
jsonwebtoken  = "9"
argon2        = { version = "0.5", features = ["std"] }
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow        = "1"
thiserror     = "1"

[[bin]]
name = "auth-service"
path = "src/main.rs"
