[package]
name = "networking-engine"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Central networking engine — allocation (ASN/VLAN/MLAG/IP), subnet carving, 4-NIC server fan-out, naming templates. Replaces libs/persistence/Net/*.cs (Phase 6.5 of the networking buildout)."

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "bigdecimal", "ipnetwork", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
ipnetwork = "0.20"
sha2 = "0.10"
hex = "0.4"
# XLSX round-trip over the existing CSV pipeline. `calamine` reads
# xls/xlsx/xlsb/ods (pure Rust, no native deps); `rust_xlsxwriter`
# emits xlsx (pure Rust, simpler API than `xlsx`). Both land as
# thin adapters at the transport layer in `xlsx_codec.rs`.
calamine = "0.26"
rust_xlsxwriter = "0.82"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
