[package]
name = "tenant-provisioner"
version = "0.1.0"
edition = "2021"
description = "Rust service that provisions dedicated databases + K8s namespaces for enterprise tenants"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
# kube 0.99 pulls k8s-openapi 0.24 transitively; pin direct dep to the
# same version so Cargo doesn't try to compile both. Version feature
# v1_31 matches our cluster (CLAUDE.md: Kubernetes 1.31). Newer
# k8s-openapi releases removed the legacy `"latest"` shortcut feature,
# so we pick the cluster version explicitly.
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
