[package]
name = "admin-service"
version = "0.1.0"
edition = "2021"
description = "Central identity admin API — user CRUD, audit reader, SSO config, session mgmt. Member of services/identity/ workspace. See docs/IDP_BUILDOUT.md Phase 4."

[dependencies]
identity-core    = { path = "../core" }

tokio            = { workspace = true }
axum             = { workspace = true }
tower-http       = { workspace = true }
sqlx             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }

[[bin]]
name = "admin-service"
path = "src/main.rs"
