[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
description = "Central auth-service — login, refresh, logout, MFA, password mgmt, SSO consumer. Member of services/identity/ workspace (see docs/IDP_BUILDOUT.md)."

[dependencies]
identity-core    = { path = "../core" }

tokio            = { workspace = true }
axum             = { workspace = true }
tower-http       = { workspace = true }
sqlx             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
jsonwebtoken     = { workspace = true }
argon2           = { workspace = true }
sha2             = { workspace = true }
hex              = { workspace = true }
base64           = { workspace = true }
totp-rs          = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }

[[bin]]
name = "auth-service"
path = "src/main.rs"
