[package]
name = "identity-core"
version = "0.1.0"
edition = "2021"
description = "Shared identity primitives — config, DB pool, JWT, MFA, passwords, sessions. Consumed by services/identity/auth-service and future admin-service + federation binaries. Phase 3 of docs/IDP_BUILDOUT.md."

[lib]
name = "identity_core"
path = "src/lib.rs"

[dependencies]
tokio            = { workspace = true }
sqlx             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
jsonwebtoken     = { workspace = true }
argon2           = { workspace = true }
sha2             = { workspace = true }
hex              = { workspace = true }
base64           = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
tracing          = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
